k8s-manifest/02-processor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-processor
  template:
    metadata:
      labels:
        app: transaction-processor
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: finmon-app-sa
      containers:
      - name: processor
        image: finmonacr19c7d5ec.azurecr.io/transactionprocessor:latest
        #https://kubernetes.io/docs/concepts/configuration/liveness-readiness-startup-probes/
        livenessProbe:
          exec:
            command:
            - pidof
            - dotnet
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - pidof
            - dotnet
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
