k8s-manifest/04-simulator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator-deployment
  namespace: finmon-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-simulator
  template:
    metadata:
      labels:
        app: transaction-simulator
    spec:
      containers:
      - name: simulator
        image: finmonacrfcea527d.azurecr.io/transactionsimulator:5795ea6a53e15bf956dc455ea4a0ae9f2112ba61
