k8s-manifest/03-api-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financial-api
  template:
    metadata:
      labels:
        app: financial-api
    spec:
      containers:
      - name: api
        image: finmonacrfcea527d.azurecr.io/financialmonitoring-api:5795ea6a53e15bf956dc455ea4a0ae9f2112ba61
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: finmon-app
spec:
  type: LoadBalancer
  selector:
    app: financial-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
